2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove {force,lock,mtime}flag from global state of co(1).

	* co.c (struct work): Add member ‘force’.
	(forceflag, lockflag, mtimeflag): Delete vars.
	(rmworkfile): Use ‘work->force’.
	(main): Update initialization form for auto var ‘work’;
	add auto vars ‘lockflag’, ‘mtimeflag’; use ‘work.force’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘targetdelta’ from global state of co(1).

	* co.c (struct jstuff): Add member ‘d’.
	(targetdelta): Delete var.
	(preparejoin, buildjoin): Use ‘js->d’.
	(main): Use ‘jstuff.d’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘neworkptr’ from global state of co(1).

	* co.c (neworkptr): Delete var.
	(cleanup): Take 2nd var ‘neworkptr’.
	(main): Add auto var ‘neworkptr’; update calls to ‘cleanup’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove {expand,suffix,version,zone}arg from global state of co(1).

	* co.c (expandarg, suffixarg, versionarg, zonearg): Delete vars.
	(struct jstuff): Add members ‘expand’, ‘suffix’, ‘version’, ‘zone’.
	(buildjoin): Use ‘js->expand’,
	‘js->suffix’, ‘js->version’, ‘js->zone’.
	(main): Use ‘jstuff.suffix’, ‘jstuff.version’,
	‘jstuff.zone’, ‘jstuff.expand’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘joinlist’, ‘lastjoin’ from global state of co(1).

	* co.c (joinlist, lastjoin): Delete vars.
	(struct jstuff): Add members ‘ls’, ‘lastidx’.
	(jpush): Use ‘js->lastidx’.
	(preparejoin): Likewise; use ‘js->ls’.
	(buildjoin): Use ‘js->lastidx’, ‘js->ls’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘jstuff’ from global state of co(1).

	* co.c (jstuff): Delete var.
	(jpush): Take 2nd arg ‘js’; use ‘js->’.
	(addjoin): Take 2nd arg ‘js’; update call to ‘jpush’.
	(preparejoin): Take 2nd arg ‘js’; use ‘js->’;
	update call to ‘addjoin’, ‘jpush’.
	(buildjoin): Take 2nd arg ‘js’; use ‘js->’.
	(main): Add auto var ‘jstuff’;
	update calls to ‘preparejoin’, ‘buildjoin’.